
- Core:
  . Fixed bug GH-8655 (Casting an object to array does not unwrap refcount=1
    references). (Nicolas Grekas)
  . Fixed bug GH-8661 (Nullsafe in coalesce triggers undefined variable
    warning). (ilutov)
  . Fixed bug GH-7821 and GH-8418 (Allow arbitrary const expressions in backed
    enums). (ilutov)

- Curl:
  . Added new constants from cURL 7.62 to 7.80. (Pierrick)

- MBString:
  . Backwards-compatible mappings for 0x5C/0x7E in Shift-JIS are restored,
    after they had been changed in 8.1.0. (Alex Dowad)

- ODBC:
  . Fixed handling of single-key connection strings. (Calvin Buckley)

- PDO_ODBC:
  . Fixed handling of single-key connection strings. (Calvin Buckley)

- Standard:
  . Deprecated utf8_encode() and utf8_decode(). (Rowan Tommins)

09 Jun 2022, PHP 8.2.0alpha1

- CLI:
  . Fixed bug #81496 (Server logs incorrect request method). (lauri)

- Core:
  . Fixed bug #81380 (Observer may not be initialized properly). (krakjoe)
  . Fixed bug GH-7771 (Fix filename/lineno of constant expressions). (ilutov)
  . Fixed bug GH-7792 (Improve class type in error messages). (ilutov)
  . Support huge pages on MacOS. (David CARLIER)

- Curl:
  . Added support for CURLOPT_XFERINFOFUNCTION. (David Carlier)
  . Added support for CURLOPT_MAXFILESIZE_LARGE. (David Carlier)

- Date:
  . Fixed GH-8458 (DateInterval::createFromDateString does not throw if
    non-relative items are present). (Derick)
  . Fixed bug #52015 (Allow including end date in DatePeriod iterations)
    (Daniel Egeberg, Derick)
  . idate() now accepts format specifiers "N" (ISO Day-of-Week) and "o" (ISO
    Year). (Pavel Djundik)

- FPM:
  . Emit error for invalid port setting. (David Carlier)
  . Added extra check for FPM proc dumpable on SELinux based systems.
    (David Carlier)
  . Added support for listening queue on macOS. (David Carlier)
  . Changed default for listen.backlog on Linux to -1. (Cristian Rodríguez)

- FTP: