@@ -1,0 +1,27 @@
+--TEST--
+curl_upkeep() function
+--EXTENSIONS--
+curl
+--SKIPIF--
+<?php
+if (curl_version()['version_number'] < 0x073e00) die('skip requires curl >= 7.62.0');
+?>
+--FILE--
+<?php
+
+$url = "https://example.com";
+
+$ch = curl_init();
+curl_setopt($ch,CURLOPT_URL,$url);
+curl_setopt($ch,CURLOPT_RETURNTRANSFER,true);
+curl_setopt($ch,CURLOPT_HTTP_VERSION,CURL_HTTP_VERSION_2_0);
+curl_setopt($ch,CURLOPT_SSL_VERIFYPEER,false);
+curl_setopt($ch, CURLOPT_UPKEEP_INTERVAL_MS, 200);
+if (curl_exec($ch)) {
+    usleep(300);
+    var_dump(curl_upkeep($ch));
+}
+curl_close($ch);
+?>
+--EXPECT--
+bool(true)
